<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">FeedFMSDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to Feed.fm sample</string>
    <string name="Play">Play</string>
    <string name="Stop">Stop</string>
    <string name="Skip">Skip</string>
    <string name="Invalidate">Invalidate</string>
	<string name="Like">Like</string>
	<string name="Unlike">Unlike</string>
	<string name="Dislike">Dislike</string>
    <string name="Track">Track</string>
     <string name="Release">Release</string>
      <string name="Error">Error</string>
     <string name="start_session">StartSession</string>

</resources>
