<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	 android:screenOrientation="portrait"
	android:orientation="vertical" 
    tools:context=".MainActivity" >

    
       <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
       
        <Button
        android:id="@+id/start_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_session" />
    
    
    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
  
        android:text="@string/Play" />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Skip" />
    
     
    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stop" />

    <Button
        android:id="@+id/invalidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Invalidate" />

    <Button
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Like" />

    <Button
        android:id="@+id/unlike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Unlike" />

    <Button
        android:id="@+id/dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dislike" />

   

</LinearLayout>
